Unit Tests: securiy adn controllers